--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         </section>
 
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1"></li>
+				<li data-target="#myCarousel" data-slide-to="2"></li>
+				<li data-target="#myCarousel" data-slide-to="3"></li>
+			</ol>
             <div class="carousel-inner">
                 <div class="item active">
                     <center>
